# iron-veil

./: .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  proxy.yaml
.github/: copilot-instructions.md
scripts/: release.sh  test_e2e.sh
src/: api.rs  audit.rs  config.rs  db_scanner.rs  interceptor.rs  main.rs  metrics.rs  scanner.rs  state.rs  telemetry.rs
src/protocol/: mod.rs  mysql.rs  postgres.rs
tests/: integration_test.rs
web/: README.md  jest.config.js  package-lock.json  package.json
web/__tests__/: settings-page.test.tsx
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/inspector/: page.tsx
web/src/app/rules/: page.tsx
web/src/app/settings/: page.tsx
web/src/components/: providers.tsx  sidebar.tsx  theme-toggle.tsx
web/src/components/charts/: connections-chart.tsx  index.ts  masking-stats-chart.tsx  query-types-chart.tsx
web/src/components/ui/: input.tsx  label.tsx  select.tsx
