[package]
name = "db-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec", "net"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3.31"
