[package]
name = "db-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec", "net"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3.31"
fake = { version = "4.4.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
rand = "0.9.2"
rand_chacha = "0.9.0"
regex = "1.12.2"
serde_json = "1.0.145"
axum = "0.8.7"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
chrono = { version = "0.4.42", features = ["serde"] }
