[package]
name = "iron-veil"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec", "net"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3.31"
fake = { version = "4.4.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
rand = "0.9.2"
rand_chacha = "0.9.0"
regex = "1.12.2"
serde_json = "1.0.145"
axum = "0.8.7"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
chrono = { version = "0.4.42", features = ["serde"] }
tokio-rustls = "0.26.4"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
rustls-platform-verifier = "0.6.2"

# OpenTelemetry
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "metrics"] }
tracing-opentelemetry = "0.28"

# JWT Authentication
jsonwebtoken = "9"

# Prometheus Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
